--- a/vue-firestore-demo/package.json
+++ b/vue-firestore-demo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-firebase-demo",
+  "name": "vue-firestore-demo",
   "version": "1.0.0",
   "description": "A Vue.js project for employee manager",
   "author": "tatwd <leoking9641@hotmail.com>",
